Fixes weird spacing around trash link in publication widget.

--- a/tool-ui/src/main/webapp/style/cms.less
+++ b/tool-ui/src/main/webapp/style/cms.less
@@ -419,7 +419,7 @@ input[type=text].expandable { min-width: 5em; }
 
     [name='action-trash'] {
         float: right;
-        margin-top: 28px;
+        margin-top: 16px;
     }
 }
 
@@ -428,7 +428,7 @@ input[type=text].expandable { min-width: 5em; }
 
     border-top: 1px solid @color-note;
     margin-bottom: 0;
-    margin-top: 5px;
+    margin-top: 10px;
     padding-top: 5px;
 }
 
